# basic-cli-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/commands/: mod.rs
src/commands/greet/: mod.rs
src/utils/: mod.rs
